--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,14 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  
+  # https://pub.dev/packages/flutter_launcher_icons
+  flutter_launcher_icons:
+
+flutter_icons:
+  image_path: "assets/img/chibi_waifu.jpeg"
+  android: true
+  ios: true
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
