--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,12 +40,13 @@ dependencies:
 
 
 dev_dependencies:
+  flutter_driver:
+    sdk: flutter
   # https://pub.dev/packages/flutter_launcher_icons
   flutter_launcher_icons:
   # https://pub.dev/packages/flutter_native_splash
   flutter_native_splash:
-  flutter_test:
-    sdk: flutter   
+  test: 
   lint:
 
 flutter_icons:
