--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,6 +21,7 @@ environment:
   sdk: ">=2.12.0 <3.0.0"
 
 dependencies:
+  animations:
   cached_network_image:
   connectivity:
   cupertino_icons:
@@ -46,8 +47,8 @@ dev_dependencies:
   flutter_launcher_icons:
   # https://pub.dev/packages/flutter_native_splash
   flutter_native_splash:
-  test: 
   lint:
+  test: 
 
 flutter_icons:
   image_path: "assets/img/chibi_waifu.jpeg"
