--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,18 +18,20 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 version: 1.0.0+1
 
 environment:
-  sdk: ">=2.12.0 <3.0.0"
+  sdk: ">=2.19.0 <3.0.0"
 
 dependencies:
   animations:
   cached_network_image:
-  connectivity:
+  connectivity_plus:
   cupertino_icons:
   flutter:
     sdk: flutter
   flutter_easyloading:
   flutter_svg:
+  go_router: ^6.2.0
   http:
+  path:
   path_provider:
   provider:
   share_plus:
@@ -40,8 +42,10 @@ dev_dependencies:
   flutter_driver:
     sdk: flutter
   flutter_launcher_icons:
+  flutter_lints:
   flutter_native_splash:
-  lint:
+  flutter_test:
+    sdk: flutter
   test: 
 
 flutter_icons:
